--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <ul class="gallery"></ul>
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
-    <script src="js/gallery.js" type="module"></script>
+    <script src="./js/gallery.js" type="module"></script>
   </div>
 </body>
 
